--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "prebuild": "npm run clean && npm run lint && echo Using TypeScript && tsc --version",
     "prebuild0": "npm run clean && npm run format && npm run lint && echo Using TypeScript && tsc --version",
     "build": "tsc --pretty",
-    "test": "jest",
+    "test": "jest --no-cache",
     "coverage": "jest --coverage",
     "watch": "npm run build -- --watch",
     "watch:test": "jest --watch"
