Change package description

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "regexact",
   "version": "0.2.2",
-  "description": "RegExact extends RegExp to return indexes of matched substrings associated with capturing groups.",
+  "description": "RegExact extends RegExp to return indexes of matched substrings related to capturing groups.",
   "license": "MIT",
   "repository": {
     "type": "git",
