--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "regexact",
   "version": "0.2.2",
-  "description": "RegExact extends RegExp to return indexes of matched substrings related to capturing groups.",
+  "description": "Get position of any JS RegExp capturing group match.",
   "license": "MIT",
   "repository": {
     "type": "git",
@@ -15,7 +15,8 @@
     "regex",
     "regexp",
     "Regular Expression",
-    "Capturing Group"
+    "Capturing Group",
+    "Capture Group"
   ],
   "files": [
     "/lib"
